src/app/contact/contact.component.scss
@import '../../assets/scss/color';
@import '../../assets/scss/layout';
@import '../../assets/scss/breakpoint';
@import '../../assets/scss/typography';
@import '../../assets/scss/shapes';
@import '../../assets/scss/z-index';

.form-fields {
  max-width: 960px;
  padding: 20px;
  background: $white;
}
.phone {
  width: 200px;
}
.subject {
  width: 600px;
}
.textareaBlock {
  flex-direction: column;
  box-sizing: border-box;
  display: flex;
  textarea {
    font-family: $text-font;
    width: 94%;
    margin-top: 4px;
    &:focus {
      border: 1px solid $blue;
      outline: none !important;
    }
  }
}
.button {
  max-width: 960px;
  padding: 35px;
  gap: 8px;
}
p {
  text-align: right;
  width: 96%;
  &.notRequired {
    text-align: left;
    margin: 0;
  }
}

